<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Entrust_type"
        android:textSize="15sp"
        android:layout_marginLeft="16dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="暂无详情"
        android:textSize="15sp"
        android:layout_marginLeft="16dp"
        android:id="@+id/entrust_type"
        />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_avg_price"
            android:textSize="15sp"
            android:layout_marginLeft="16dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="暂无详情"
            android:textSize="15sp"
            android:layout_marginLeft="16dp"
            android:id="@+id/buy_avg_price"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
       >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_time"
            android:textSize="15sp"
            android:layout_marginLeft="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="暂无详情"
            android:textSize="15sp"
            android:layout_marginLeft="16dp"
            android:id="@+id/buy_time"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/win_price"
            android:textSize="15sp"
            android:layout_marginLeft="16dp"
         />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="暂无详情"
            android:textSize="15sp"
            android:layout_marginLeft="16dp"
            android:id="@+id/win_price"
            android:textColor="@color/item_now_red"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loss_price"
            android:textSize="15sp"
            android:layout_marginLeft="16dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="暂无详情"
            android:textSize="15sp"
            android:layout_marginLeft="16dp"
            android:id="@+id/loss_price"
            android:textColor="@color/item_now_green"/>
    </LinearLayout>
</LinearLayout>
