<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/view_toolbar"></include>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/content"
            android:layout_weight="1">

        </FrameLayout>
        <!--底部导航栏上面的阴影部分 -->
        <View
            android:layout_width="match_parent"
            android:background="@drawable/shadow"
            android:layout_height="2dp"/>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/buy_Layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:id="@+id/buy_image"
                        android:src="@mipmap/ic_buy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:id="@+id/buy_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/main_buy"
                        android:textColor="#82858b" />


                </LinearLayout>
            </RelativeLayout>
            <!--<RelativeLayout
                android:id="@+id/sale_Layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/sale_image"
                        android:src="@mipmap/ic_sale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/sale_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/main_sale"
                        android:textColor="#82858b" />
                </LinearLayout>

            </RelativeLayout>-->
            <RelativeLayout
                android:id="@+id/now_Layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/now_image"
                        android:src="@mipmap/ic_now"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:id="@+id/now_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/main_now"
                        android:textColor="#82858b" />
                </LinearLayout>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/history_Layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/history_image"
                        android:src="@mipmap/ic_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:id="@+id/history_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/main_history"
                        android:textColor="#82858b" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

