<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:background="@color/background_grey">


    <LinearLayout
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/item_now_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_item_now_sale"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="32dp"
            />

        <TextView
            android:id="@+id/item_now_business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:textSize="18sp"
            android:text="买入"
            android:textColor="@color/item_now_green"
            />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_history"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="32dp"
            />

        <TextView
            android:id="@+id/item_now_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:text="04-05 13:53"
            android:textColor="@color/secondary_text"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/background_grey_light">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/StopWinPrice"
                        android:textColor="#82858b" />

                    <TextView
                        android:id="@+id/item_now_entrust_win"
                        android:textSize="15sp"
                        android:layout_marginTop="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="2700.0"
                        android:textColor="@color/primary_text" />


                </LinearLayout>
            </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/buy_avg_price"
                    android:textColor="#82858b" />

                <TextView
                    android:id="@+id/item_now_avg_price"
                    android:textSize="15sp"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="2700.0"
                    android:textColor="@color/primary_text" />


            </LinearLayout>
        </RelativeLayout>
            <RelativeLayout
                android:id="@+id/sale_Layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/WeiTuoAmount"
                        android:textColor="#82858b" />

                    <TextView
                        android:id="@+id/item_now_entrust_number"
                        android:textSize="15sp"
                        android:layout_marginTop="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="0.1165"
                        android:textColor="@color/primary_text" />

                </LinearLayout>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/now_Layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/StopLossPrice"
                        android:textColor="#82858b" />

                    <TextView
                        android:id="@+id/item_now_entrust_loss"
                        android:textSize="15sp"
                        android:layout_marginTop="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="0.1165"
                        android:textColor="@color/primary_text" />
                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>

    <RelativeLayout

        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView

            android:id="@+id/item_now_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/item_now_cancel"
            android:textSize="15sp"
            android:text="修改"
            android:layout_marginRight="16dp"
            android:textColor="@color/primary_color"
             />

        <TextView
            android:id="@+id/item_now_cancel"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:textSize="15sp"
            android:text="撤销"
            android:textColor="@color/primary_color"
            />

        </RelativeLayout>

    </RelativeLayout>



</LinearLayout>